@@ -8,8 +8,6 @@
 #
 SRC_ROOT=`pwd`
 
-JAVA_OPTS="-Xmx2560m -XX:MaxPermSize=512m -XX:+UseCompressedOops"
-
 reportenv()
 {
     echo "SRC_ROOT=$SRC_ROOT"
